API Change: all functions start with "create_"
I also split out create_sqlite_sequence() from the create_sequence()
function/method. It was failing (undetected!) due to the fact that a
DROP TABLE statement attempted while a SELECT statement is pending
results in an SQLITE_LOCKED error. See [1] for details.

[1] http://www.sqlite.org/cvstrac/wiki?p=DatabaseIsLocked

--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 0.0.3_1 (2013-05-24)
 
     API Changes:
-        - None.
+        - thinsql_create_methods() becomes create_methods().
+        - sqlite_create_functions() becomes create_functions().
+        - New function create_sqlite_sequence() has been extracted out
+          of the old create_sequence() function/method where it was
+          actually failing.
 
     New Features:
         - None.
