--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
+0.0.5_1 (2013-06-13)
+
+    API Changes:
+        - None.
+
+    New Features:
+        - None.
+
+    Enhancements:
+        - None.
+
+    Bug Fixes:
+        - None.
+
 0.0.4 (2013-06-11)
 
     API Changes:
