Convert to Module::Install Makefile.PL away from Minilla
Minilla doesn't handle x.x.x_y versions, and otherwise does too much
for me. I think the experiment is over for the moment.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.0.5_1 (2013-06-13)
+0.0.5_2 (2013-06-13)
 
     API Changes:
         - None.
@@ -7,7 +7,9 @@
         - None.
 
     Enhancements:
-        - None.
+        - Use Log::Any::Test for log tests instead of my filesystem
+          hack.
+        - Don't index the SHA1 aggregate packages on CPAN
 
     Bug Fixes:
         - None.
