--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
+0.0.7_1 (yyyy-mm-dd)
+
+    API Changes:
+        - None.
+
+    New Features:
+        - None.
+
+    Enhancements:
+        - None.
+
+    Bug Fixes:
+        - None.
+
 0.0.6 (2013-12-22)
 
     API Changes:
