sha1* functions only take one argument
There is no obvious, valid reason for having written these functions to
take more than one argument. I'm limiting it now so it doesn't surprise
me somewhere later on.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 0.0.7_1 (yyyy-mm-dd)
 
     API Changes:
-        - None.
+        - sha1* functions only use first argument as input.
 
     New Features:
         - None.
