New API: agg_sha1*($expr, $sort_expr)
The old api didn't make sense for two reasons:

    - SQLite doesn't guarantee the order in which $expr is fed to the
      aggregation function
    - Who needs more than one $expr in SQL? Can concatenate if
      required.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
 
     API Changes:
         - sha1* functions only use first argument as input.
+        - agg_sha1* functions now use first argument for input and
+          the second argument as a sort criteria.
 
     New Features:
         - None.
