--- a/Changes
+++ b/Changes
@@ -1,4 +1,18 @@
-0.0.8 (2014-04-22)
+0.0.9_1 (yyyy-mm-dd)
+
+    API Changes:
+       - None.
+
+   New Features:
+      - None.
+
+   Enhancements:
+      - None.
+
+   Bug Fixes:
+      - None.
+
+0.0.8 (yyyy-mm-dd)
 
     API Changes:
         - sha1* functions only use first argument as input.
