--- a/.release/Changes
+++ b/.release/Changes
@@ -1,3 +1,17 @@
+0.0.9_1 (2014-04-22)
+
+    API Changes:
+       - None.
+
+   New Features:
+      - None.
+
+   Enhancements:
+      - None.
+
+   Bug Fixes:
+      - None.
+
 0.0.8 (2014-04-22)
 
     API Changes:
