--- a/.release/Changes
+++ b/.release/Changes
@@ -1,7 +1,7 @@
-0.0.9_1 (2014-04-22)
+0.0.9_1 (2014-04-23)
 
-    API Changes:
-       - None.
+   API Changes:
+      - Restore multiple argument sha1* functions.
 
    New Features:
       - None.
