--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
+0.0.11_1 (yyyy-mm-dd)
+
+    API Changes:
+       - None.
+
+   New Features:
+      - None.
+
+   Enhancements:
+      - None.
+
+   Bug Fixes:
+      - None.
+
 0.0.10 (2014-04-23)
 
    API Changes:
