--- a/.release/README
+++ b/.release/README
@@ -2,7 +2,7 @@ NAME
     DBIx::ThinSQL::SQLite - add various functions to SQLite
 
 VERSION
-    0.0.9_1 (2014-04-23) Development release.
+    0.0.10 (2014-04-23) Development release.
 
 SYNOPSIS
         use DBIx::ThinSQL;
