--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
 
     Bug Fixes:
         - Depend on DBIx::ThinSQL 0.0.34 (for log_warn())
+        - Fix broken VERSION (0.0.12 did not index on CPAN)
 
 0.0.12 (2015-06-16)
 
