--- a/Changes
+++ b/Changes
@@ -1,3 +1,17 @@
+0.0.15_1 (yyyy-mm-dd)
+
+    API / Behaviour Changes:
+        - None.
+
+    New Features:
+        - None.
+
+    Enhancements:
+        - None.
+
+    Bug Fixes:
+        - None.
+
 0.0.14 (2015-06-19)
 
     API / Behaviour Changes:
