--- a/Changes
+++ b/Changes
@@ -1,3 +1,20 @@
+0.0.17_1 (yyyy-mm-dd)
+
+    API / Behaviour Changes:
+        - None.
+
+    New Features:
+        - None.
+
+    Enhancements:
+        - None.
+
+    Bug Fixes:
+        - None.
+
+    Dependencies:
+        - None.
+
 0.0.16 (2016-05-20)
 
     Enhancements:
