Set version to 0.0.17

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.0.17_1 (yyyy-mm-dd)
+0.0.17 (yyyy-mm-dd)
 
     API / Behaviour Changes:
         - Sequences now create a new ${name}_sequence table
