--- a/Changes
+++ b/Changes
@@ -1,3 +1,20 @@
+0.0.18_1 (yyyy-mm-dd)
+
+    API / Behaviour Changes:
+        - None.
+
+    New Features:
+        - None.
+
+    Enhancements:
+        - None.
+
+    Bug Fixes:
+        - None.
+
+    Dependencies:
+        - None.
+
 0.0.17 (2017-01-04)
 
     API / Behaviour Changes:
